--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 </head>
 <body>
     <!-- Хедер -->
-    <header>
-        <div class="container">
-            <div class="logo">EWS</div>
-            <nav>
-                <ul>
-                    <li><a href="#home">Головна</a></li>
-                    <li><a href="#services">Послуги</a></li>
-                    <li><a href="#portfolio">Портфоліо</a></li>
-                    <li><a href="#about">Про нас</a></li>
-                    <li><a href="#contact">Контакти</a></li>
-                </ul>
-            </nav>
-            <a href="#contact" class="cta-button">Замовити консультацію</a>
-        </div>
-    </header>
+<header>
+    <div class="container">
+        <div class="logo">EWS</div>
+        <div class="menu-toggle">☰</div> <!-- Іконка гамбургера -->
+        <nav class="nav-menu">
+            <ul>
+                <li><a href="#home">Головна</a></li>
+                <li><a href="#services">Послуги</a></li>
+                <li><a href="#portfolio">Портфоліо</a></li>
+                <li><a href="#about">Про нас</a></li>
+                <li><a href="#contact">Контакти</a></li>
+            </ul>
+        </nav>
+        <a href="#contact" class="cta-button">Замовити консультацію</a>
+    </div>
+</header>
 
     <!-- Герой-секція -->
     <section id="home" class="hero">
