--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EWS - Розробка сайтів, магазинів, чат-ботів</title>
+    <title>EWS - Webentwicklung, Online-Shops, Chatbots</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Хедер -->
-<header>
-    <div class="container">
-        <div class="logo">EWS</div>
-        <div class="menu-toggle">☰</div> <!-- Іконка гамбургера -->
-        <nav class="nav-menu">
-            <ul>
-                <li><a href="#home">Головна</a></li>
-                <li><a href="#services">Послуги</a></li>
-                <li><a href="#portfolio">Портфоліо</a></li>
-                <li><a href="#about">Про нас</a></li>
-                <li><a href="#contact">Контакти</a></li>
-            </ul>
-        </nav>
-        <a href="#contact" class="cta-button">Замовити консультацію</a>
-    </div>
-</header>
+    <header>
+        <div class="container">
+            <div class="logo">EWS</div>
+            <div class="menu-toggle">☰</div>
+            <nav class="nav-menu">
+                <ul>
+                    <li><a href="#home">Startseite</a></li>
+                    <li><a href="#services">Dienstleistungen</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">Über uns</a></li>
+                    <li><a href="#contact">Kontakt</a></li>
+                </ul>
+            </nav>
+            <a href="#contact" class="cta-button">Beratung anfragen</a>
+        </div>
+    </header>
 
     <!-- Герой-секція -->
     <section id="home" class="hero">
         <div class="container">
-            <h1>Створюємо цифрові рішення для вашого бізнесу</h1>
-            <p>Сайти, інтернет-магазини та чат-боти, які працюють на вас 24/7</p>
+            <h1>Wir schaffen digitale Lösungen für Ihr Unternehmen</h1>
+            <p>Websites, Online-Shops und Chatbots, die rund um die Uhr für Sie arbeiten</p>
             <div class="buttons">
-                <a href="#services" class="btn-secondary">Дізнатись більше</a>
-                <a href="#contact" class="btn-primary">Замовити проєкт</a>
+                <a href="#services" class="btn-secondary">Mehr erfahren</a>
+                <a href="#contact" class="btn-primary">Projekt anfragen</a>
             </div>
         </div>
     </section>
@@ -41,76 +41,76 @@
     <!-- Послуги -->
     <section id="services" class="services">
         <div class="container">
-            <h2>Наші послуги</h2>
+            <h2>Unsere Dienstleistungen</h2>
             <div class="service-grid">
                 <div class="service-item">
-                    <h3>Сайти</h3>
-                    <p>Сучасні та адаптивні сайти для будь-яких задач.</p>
+                    <h3>Websites</h3>
+                    <p>Moderne und responsive Websites für jede Aufgabe.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Інтернет-магазини</h3>
-                    <p>Продавайте онлайн легко та ефективно.</p>
+                    <h3>Online-Shops</h3>
+                    <p>Verkaufen Sie online einfach und effizient.</p>
                 </div>
                 <div class="service-item">
-                    <h3>Чат-боти</h3>
-                    <p>Автоматизуйте спілкування з клієнтами в Telegram.</p>
+                    <h3>Chatbots</h3>
+                    <p>Automatisieren Sie die Kommunikation mit Kunden in Telegram.</p>
                 </div>
             </div>
         </div>
     </section>
 
-<!-- Портфоліо -->
-<section id="portfolio" class="portfolio">
-    <div class="container">
-        <h2>Наше портфоліо</h2>
-        <div class="portfolio-slider">
-            <div class="portfolio-items">
-                <div class="portfolio-item active">
-                    <img src="ChatGPT Image 2 квіт. 2025 р., 13_55_04.png" alt="Інтернет-магазин одягу">
-                    <h3>Інтернет-магазин одягу</h3>
-                    <p>Стильний магазин із зручною навігацією, 2024.</p>
+    <!-- Портфоліо -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2>Unser Portfolio</h2>
+            <div class="portfolio-slider">
+                <div class="portfolio-items">
+                    <div class="portfolio-item active">
+                        <img src="ChatGPT Image 2 квіт. 2025 р., 13_55_04.png" alt="Online-Shop für Kleidung">
+                        <h3>Online-Shop für Kleidung</h3>
+                        <p>Stilvoller Shop mit benutzerfreundlicher Navigation, 2024.</p>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="chatbot.png" alt="Chatbot für Lieferungen">
+                        <h3>Chatbot für Lieferungen</h3>
+                        <p>Automatisierte Lösung für Bestellungen in Telegram, 2023.</p>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="cafe.png" alt="Website für ein Café">
+                        <h3>Website für ein Café</h3>
+                        <p>Responsive Website mit Menü und Reservierungssystem, 2024.</p>
+                    </div>
                 </div>
-                <div class="portfolio-item">
-                    <img src="chatbot.png" alt="Чат-бот доставки">
-                    <h3>Чат-бот доставки</h3>
-                    <p>Автоматизоване рішення для замовлень у Telegram, 2023.</p>
+                <div class="slider-controls">
+                    <button class="slider-prev">Zurück</button>
+                    <button class="slider-next">Weiter</button>
                 </div>
-                <div class="portfolio-item">
-                    <img src="cafe.png" alt="Сайт для кафе">
-                    <h3>Сайт для кафе</h3>
-                    <p>Адаптивний сайт із меню та бронюванням, 2024.</p>
-                </div>
-            </div>
-            <div class="slider-controls">
-                <button class="slider-prev">Попередній</button>
-                <button class="slider-next">Наступний</button>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Про нас -->
-<section id="about" class="about">
-    <div class="container">
-        <h2>Про нас</h2>
-        <p>Ми — EWS, команда професіоналів, які створюють сучасні цифрові рішення для вашого бізнесу. З 2020 року ми розробляємо стильні сайти, зручні інтернет-магазини та ефективні чат-боти в Telegram. Наша мета — допомогти вам виділитися в онлайн-просторі та залучити більше клієнтів. Індивідуальний підхід, креативність і новітні технології — це те, що робить нас особливими. Довірте нам свій проєкт, і ми втілимо ваші ідеї в життя!</p>
-    </div>
-</section>
+    <!-- Про нас -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>Über uns</h2>
+            <p>Wir sind EWS, ein Team von Profis, das moderne digitale Lösungen für Ihr Unternehmen entwickelt. Seit 2020 erstellen wir stilvolle Websites, benutzerfreundliche Online-Shops und effiziente Chatbots in Telegram. Unser Ziel ist es, Ihnen zu helfen, sich im Online-Bereich abzuheben und mehr Kunden zu gewinnen. Individuelle Ansätze, Kreativität und die neuesten Technologien machen uns besonders. Vertrauen Sie uns Ihr Projekt an, und wir setzen Ihre Ideen in die Tat um!</p>
+        </div>
+    </section>
 
     <!-- Контакти -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Зв’яжіться з нами</h2>
+            <h2>Kontaktieren Sie uns</h2>
             <form>
-                <input type="text" placeholder="Ваше ім’я" required>
-                <input type="tel" placeholder="Телефон" required>
-                <textarea placeholder="Опис вашого проєкту" required></textarea>
-                <button type="submit" class="btn-primary">Відправити</button>
+                <input type="text" placeholder="Ihr Name" required>
+                <input type="tel" placeholder="Telefonnummer" required>
+                <textarea placeholder="Beschreibung Ihres Projekts" required></textarea>
+                <button type="submit" class="btn-primary">Absenden</button>
             </form>
             <div class="contact-info">
                 <p>Email: info@ews.com</p>
                 <p>Telegram: @EWS_team</p>
-                <p>Телефон: +380 123 456 789</p>
+                <p>Telefon: +380 123 456 789</p>
             </div>
         </div>
     </section>
@@ -118,7 +118,7 @@
     <!-- Футер -->
     <footer>
         <div class="container">
-            <p>© 2025 EWS. Усі права захищено.</p>
+            <p>© 2025 EWS. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
 
